fix: :bug: adjust overflow handling and z-index in SideMenu for better visibility and layout on mobile

--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -10,6 +10,9 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+ul {
+    list-style: none;
+}
 
 .dropdown ul li:hover,
 .selected {
